--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.main.MarketFragment"
+    tools:context=".ui.main.market.MarketFragment"
     android:background="#EF9A9A">
 
     <!-- TODO: Update blank fragment layout -->
