Implement mapping data to UI

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack191919"
@@ -70,15 +71,26 @@
         style="@style/KanitTextViewStyleWhite"
         android:layout_width="@dimen/space_00dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_20dp"
         android:background="@color/colorGreen2FBC86"
         android:gravity="center"
         android:text="@string/label_button_login"
-        android:layout_marginTop="@dimen/space_20dp"
         android:textSize="@dimen/text_size_20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/endGuideline"
         app:layout_constraintStart_toStartOf="@id/startGuideline"
         app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/space_30dp"
+        android:layout_height="@dimen/space_30dp"
+        android:theme="@style/AppTheme.ProgressBar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibillity="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
