--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -20,5 +20,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_market" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/space_30dp"
+        android:layout_height="@dimen/space_30dp"
+        android:theme="@style/AppTheme.ProgressBar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibillity="visible" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
