--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,4 +44,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/font_kanit</item>
     </style>
+
+    <style name="AppTheme.ProgressBar">
+        <item name="colorAccent">@color/colorGreen2FBC86</item>
+    </style>
 </resources>
