--- a/app/src/main/res/navigation/nav_account.xml
+++ b/app/src/main/res/navigation/nav_account.xml
@@ -7,5 +7,20 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.bitazzademo.ui.account.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/actionSignUp"
+            app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/actionForgotPassword"
+            app:destination="@id/forgotPasswordFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.bitazzademo.ui.account.SignUpFragment"
+        android:label="SignUpFragment" />
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.example.bitazzademo.ui.account.ForgotPasswordFragment"
+        android:label="ForgotPasswordFragment" />
 </navigation>
